--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,5 @@
-[package]
-name = "project-name-tbd"
-version = "0.1.0"
-authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-vulkano="0.14.0"
-vulkano-shaders="0.14.0"
-winit="0.20.0-alpha4"
-vulkano-win="0.15.0"
-image = "0.21"
+[workspace]
+members = [
+    "my_engine",
+    "my_game"
+]
