--- a/my_engine/Cargo.toml
+++ b/my_engine/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-vulkano="0.14.0"
-vulkano-shaders="0.14.0"
-winit="0.20.0-alpha4"
-vulkano-win="0.15.0"
+#vulkano="0.16.0"
+#vulkano-shaders="0.14.0"
+winit="0.19.4"
+# @TODO, use official release one pushed
+#vulkano-win="0.16.0"
+vulkano = { git =  "https://github.com/vulkano-rs/vulkano" }
+vulkano-shaders = { git =  "https://github.com/vulkano-rs/vulkano" }
+vulkano-win = { git =  "https://github.com/vulkano-rs/vulkano" }
