--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "my_game"
+name = "engine"
 version = "0.1.0"
 authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-my_engine = { path = "../my_engine" }
-rand = "0.7.2"
+winit="0.22"
+futures = "0.3"
+bytemuck = "1.4"
+
+[dependencies.wgpu]
+version = "0.7"
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.1"
+glob = "0.3"
+shaderc = "0.6"
