--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit="0.22"
+winit="0.24"
 futures = "0.3"
 bytemuck = "1.4"
+image = "0.23"
+anyhow = "1.0" 
 
 [dependencies.wgpu]
 version = "0.7"
