--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -21,3 +21,10 @@ anyhow = "1.0"
 fs_extra = "1.1"
 glob = "0.3"
 shaderc = "0.6"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "math"
+harness = false
