--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-engine = { path = "../engine" }
+pantheon = { path = "../pantheon" }
 rand = "0.7.2"
 enum_dispatch = "0.3"
