--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 pantheon = { path = "../pantheon" }
 hermes = { path = "../hermes" }
+core = { path = "../core" } 
 rand = "0.8.3"
 enum_dispatch = "0.3"
