--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -3,7 +3,7 @@ name = "pantheon"
 version = "0.1.1"
 authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
 edition = "2018"
-description = "An opionated WIP/Experimental 3D game engine"
+description = "An opinionated WIP/Experimental 3D game engine"
 repository = "https://github.com/AlecGoncharow/zeus-rs"
 license =  "MIT OR Apache-2.0"
 categories = ["game-engines", "graphics", "rendering"]
