--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -17,6 +17,9 @@ futures = "0.3"
 bytemuck = "1.4"
 image = "0.23"
 anyhow = "1.0"
+shaderc = "0.7"
+notify = "4.0"
+tokio = { version = "1", features = ["full"] }
 
 [dependencies.wgpu]
 version = "0.7"
@@ -25,7 +28,7 @@ version = "0.7"
 anyhow = "1.0"
 fs_extra = "1.1"
 glob = "0.3"
-shaderc = "0.6"
+shaderc = "0.7"
 
 [dev-dependencies]
 criterion = "0.3"
@@ -33,3 +36,4 @@ criterion = "0.3"
 [[bench]]
 name = "math"
 harness = false
+
