--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 parking_lot = "0.11.1"
+anyhow = "1.0"
+thiserror = "1.0"
