--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -8,11 +8,12 @@ repository = "https://github.com/AlecGoncharow/zeus-rs"
 license =  "MIT OR Apache-2.0"
 categories = ["game-engines", "graphics", "rendering"]
 readme = "README.md"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "0.24"
+winit = "0.25"
 futures = "0.3"
 bytemuck = "1.4"
 image = "0.23"
@@ -22,7 +23,8 @@ notify = "4.0"
 tokio = { version = "1", features = ["full"] }
 
 [dependencies.wgpu]
-version = "0.9"
+version = "0.10"
+features = ["spirv"]
 
 [build-dependencies]
 anyhow = "1.0"
