--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -9,8 +9,16 @@ edition = "2018"
 [dependencies]
 pantheon = { path = "../pantheon" }
 hermes = { path = "../hermes" }
-core = { path = "../core" } 
-rand = "0.8.3"
+rand = { version = "0.8", features = ["small_rng"] }
 enum_dispatch = "0.3"
+bytemuck = "1.4"
 
+[dependencies.wgpu]
+version = "0.12"
+features = ["spirv"]
 
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.1"
+glob = "0.3"
+shaderc = "0.7"
