--- a/game-client/Cargo.toml
+++ b/game-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "game_client"
+name = "game-client"
 version = "0.1.0"
 authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
 edition = "2018"
