--- a/atlas/Cargo.toml
+++ b/atlas/Cargo.toml
@@ -11,6 +11,8 @@ pantheon = { path = "../pantheon" }
 enum_dispatch = "0.3"
 rand = { version = "0.8", features = ["small_rng"] }
 bytemuck = "1.4"
+tracing = "0.1"
+bitflags = "1.3"
 
 [dependencies.wgpu]
 version = "0.12"
