--- a/game-client/Cargo.toml
+++ b/game-client/Cargo.toml
@@ -12,6 +12,9 @@ hermes = { path = "../hermes" }
 atlas = { path = "../atlas" }
 rand = { version = "0.8", features = ["small_rng"] }
 enum_dispatch = "0.3"
+tracing-subscriber = "0.3"
+tracing = "0.1"
+tracing-flame = "0.2"
 
 [build-dependencies]
 anyhow = "1.0"
