--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -21,6 +21,8 @@ anyhow = "1.0"
 shaderc = "0.7"
 notify = "4.0"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+bitflags = "1.3"
 
 [dependencies.wgpu]
 version = "0.12"
