--- a/atlas/Cargo.toml
+++ b/atlas/Cargo.toml
@@ -13,6 +13,7 @@ rand = { version = "0.8", features = ["small_rng"] }
 bytemuck = "1.4"
 tracing = "0.1"
 bitflags = "1.3"
+static_assertions = "1.1.0"
 
 [dependencies.wgpu]
 version = "0.12"
