--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -23,10 +23,15 @@ notify = "4.0"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 bitflags = "1.3"
+smallvec = "1.8"
 
 [dependencies.wgpu]
 version = "0.12"
 features = ["spirv"]
+
+[dependencies.bumpalo]
+version = "3.9"
+features = ["collections"]
 
 [build-dependencies]
 anyhow = "1.0"
