--- a/pantheon/Cargo.toml
+++ b/pantheon/Cargo.toml
@@ -24,10 +24,11 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 bitflags = "1.3"
 smallvec = "1.8"
+naga = "0.11"
 
 [dependencies.wgpu]
-version = "0.14"
-features = ["spirv"]
+version = "0.15"
+features = ["naga"]
 
 [dependencies.bumpalo]
 version = "3.9"
